[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gnucash-asx-fetch"
description = "Utility to fetch and add current ASX prices to one or more gnucash XML files"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["gnucash", "finance-quote"]
classifiers = [
  "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
  "yfinance[optional]",
]

[[project.authors]]
name = "Mark Blakeney"
email = "mark.blakeney@bullet-systems.net"

[project.urls]
Homepage = "https://github.com/bulletmark/gnucash-asx-fetch"

[project.scripts]
gnucash-asx-fetch = "gnucash_asx_fetch:main"

[project.license]
text = "GPLv3"

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.mypy]
implicit_optional = true
warn_no_return = false
allow_untyped_globals = true
allow_redefinition = true

[tool.edit-lint]
linters = [
  "ruff",
  "flake8",
  "pyright",
]

# vim:se sw=2:
